@@ -1,7 +1,7 @@
 #! /bin/sh -e
 
 # update-grub helper script.
-# Copyright (C) 2006,2007  Free Software Foundation, Inc.
+# Copyright (C) 2006,2007,2008  Free Software Foundation, Inc.
 #
 # GRUB is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -16,7 +16,10 @@
 # You should have received a copy of the GNU General Public License
 # along with GRUB.  If not, see <http://www.gnu.org/licenses/>.
 
-if [ "x${GRUB_DISTRIBUTOR}" = "" ] ; then
+libdir=@libdir@
+. ${libdir}/grub/update-grub_lib
+
+if [ "x${GRUB_DISTRIBUTOR}" = "x" ] ; then
   OS=GNU/Linux
 else
   OS="${GRUB_DISTRIBUTOR} GNU/Linux"
@@ -74,7 +77,7 @@ find_latest ()
 }
 
 list=`for i in /boot/vmlinu[xz]-* /vmlinu[xz]-* ; do
-        if test -e $i ; then echo -n "$i " ; fi
+        if grub_file_is_not_garbage "$i" ; then echo -n "$i " ; fi
       done`
 
 while [ "x$list" != "x" ] ; do
